umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_bold-bonds.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 180, col 9"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 180, col 9"
extended_molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 180, col 9"
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 180, col 9"
